fix(pdf-cropper): prevent pdf page image width from being restricted on overflow
Set max-width and max-height styles of the img tag to none.
Wrap the img element with an inline-block div.

This fixes an issue where, if the image width exceeds the container, it doesn't trigger a horizontal scrollbar.
The image gets compressed instead, which breaks the cropper overlay coordinates.

--- a/src/assets/css/pdf-cropper.css
+++ b/src/assets/css/pdf-cropper.css
@@ -1,6 +1,8 @@
 .pdf-cropper-img {
   width: var(--pdf-page-scaled-width);
   height: var(--pdf-page-scaled-height);
+  max-width: none;
+  max-height: none;
 }
 
 .overlay {
